fix: broken links
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -11,7 +11,7 @@ import ThemeImage from '../../../../components/ThemeImage.astro';
 
 Distr is an open source software distribution platform built for multiple [deployment scenarios](/docs/use-cases/fully-self-managed/). It enables software and AI companies to distribute applications and artifacts to self-managed environments.
 
-Distr provides distribution tooling for [self-managed](/docs/use-cases/fully-self-managed/asdf/as), [BYOC](/docs/use-cases/byoc/), [air-gapped](/docs/use-cases/air-gapped/),
+Distr provides distribution tooling for [self-managed](/docs/use-cases/fully-self-managed/), [BYOC](/docs/use-cases/byoc-bring-your-own-cloud/), [air-gapped](/docs/use-cases/air-gapped/),
 and [edge deployments](/docs/use-cases/edge-deployments/) while giving vendors visibility and control throughout the application lifecycle.
 
 ## Architecture
@@ -27,7 +27,7 @@ and [edge deployments](/docs/use-cases/edge-deployments/) while giving vendors v
 | Feature                              | Description                                                                                                                                                                                |
 | ------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 🔄 **Multiple distribution models**  | Distr supports fully self-managed, assisted self-managed, BYOC, air-gapped, and edge deployments to meet any customer requirement.                                                         |
-| 🛠️ **Works with existing tools**     | Distr integrates with Docker, Helm, and all OCI-compliant tools as well as [GitHub Actions](http://localhost:4321/docs/integrations/gh-action/) fitting easily into established workflows. |
+| 🛠️ **Works with existing tools**     | Distr integrates with Docker, Helm, and all OCI-compliant tools as well as [GitHub Actions](/docs/integrations/gh-action/) fitting easily into established workflows. |
 | 🔒 **Built for enterprise security** | Supports air-gapped environments and [token based](/docs/integrations/personal-access-token/) private registry access                                                                      |
 | 📦 **Multiple package formats**      | Distributes Docker Compose files, Helm charts and any OCI-compliant artifact.                                                                                                              |
 | 🔍 **Complete visibility**           | Centralized monitoring of deployment status, versions, and health across all customer environments.                                                                                        |
