--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -13,7 +13,7 @@ Deployment Agents are a core component of the Distr platform, designed to run wi
 <Aside type="note">
   Distr deployment agents are the key components that enable the [Assisted
   Self-Managed Customer](/docs/use-cases/assisted-self-managed/) and
-  [BYOC](/docs/use-cases/byoc/) use cases.
+  [BYOC](/docs/use-cases/byoc-bring-your-own-cloud/) use cases.
 </Aside>
 
 ## Agent Types
@@ -76,8 +76,8 @@ The Applications section provides vendors with a dedicated space to configure an
 
 For detailed instructions on adding applications to Distr, see our platform management guides:
 
-- [Onboarding a Docker Application](/docs/guides/platform-management/onboarding-a-docker-app/)
-- [Onboarding a Helm Application](/docs/guides/platform-management/onboarding-a-helm-app/)
+- [Onboarding a Docker Application](/docs/guides/onboarding-a-docker-app/)
+- [Onboarding a Helm Application](/docs/guides/onboarding-a-helm-app/)
 
 ### Deployments
 
