chore: updated the file descriptions

--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -1,6 +1,6 @@
 ---
 title: What is Distr?
-description: A software distribution platform for delivering applications across varied deployment scenarios
+description: Deliver your software to any environment with comprehensive tooling for distribution, deployment, and access management.
 slug: docs/getting-started/what-is-distr
 sidebar:
   order: 1
