--- a/src/content/docs/docs/getting-started/core-concepts.mdx
+++ b/src/content/docs/docs/getting-started/core-concepts.mdx
@@ -1,6 +1,6 @@
 ---
 title: Core Concepts
-description: Understanding the core concepts of Distr
+description: Understand Distr's key components and distribution models to build your software delivery workflow.
 sidebar:
   order: 2
 ---
