--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -1,6 +1,6 @@
 ---
 title: Deployment methods
-description: Multiple ways to deploy Distr
+description: Choose between Distr's managed SaaS platform or self-host Distr in your own environment to meet your security and compliance needs.
 sidebar:
   order: 4
 ---
