--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: Quickstart
-description: Get started with Distr in minutes
+description: Complete three interactive tutorials to set up your registry, deploy your first application, and onboard your first customer.
 sidebar:
   order: 3
 ---
