--- a/src/content/docs/docs/guides/docker-env-var-template.mdx
+++ b/src/content/docs/docs/guides/docker-env-var-template.mdx
@@ -1,6 +1,6 @@
 ---
 title: Configure Docker Environment Variables
-description: 'With Distr you can define environment variable templates for deploying Docker applications. Tip: With docker compose you can reference variables in multiple services.'
+description: Create customizable environment variable templates for your Docker applications and let customers configure them before deployment.
 sidebar:
   order: 4
 ---
@@ -37,7 +37,7 @@ This setup consists of three parts:
   to add the new variables manually when they release a new version.
 </Aside>
 
-Here’s an example of how it works:
+Here's an example of how it works:
 
 <Aside type="tip">
   Using `:?error` ensures that the template variable must be set, else it will
