--- a/src/content/docs/docs/guides/how-to-registry.mdx
+++ b/src/content/docs/docs/guides/how-to-registry.mdx
@@ -1,6 +1,6 @@
 ---
 title: How to set up and use the Registry
-description: Step-by-step instructions for configuring your registry slug, authenticating with a PAT, pushing OCI artifacts, and managing access and usage analytics in the Distr Artifact Registry.
+description: Set up your registry, push your first artifact, and start distributing your software to customers with fine-grained access control.
 slug: docs/guides/container-registry
 sidebar:
   order: 3
