--- a/src/content/docs/docs/guides/license-mgmt.mdx
+++ b/src/content/docs/docs/guides/license-mgmt.mdx
@@ -1,6 +1,6 @@
 ---
 title: License Management
-description: How to use licenses to grant end-customers access to specific application versions
+description: Control which versions of your software each customer can access and deploy using Distr's licensing system.
 sidebar:
   order: 5
 ---
@@ -14,7 +14,7 @@ In this guide, we'll walk you through how to use the license management feature 
   out to us on [Discord](https://discord.gg/6qqBSAWZfW).
 </Aside>
 
-With the licensing feature, you can link a license to a customer, allowing access to specific application versions, whether it’s one, a select few, or all available versions. You can name the license, set an expiration date, and assign it to a particular customer, giving you granular control over which applications and versions each end-customer can use.
+With the licensing feature, you can link a license to a customer, allowing access to specific application versions, whether it's one, a select few, or all available versions. You can name the license, set an expiration date, and assign it to a particular customer, giving you granular control over which applications and versions each end-customer can use.
 
 ## License flow diagram
 
@@ -29,7 +29,7 @@ With the licensing feature, you can link a license to a customer, allowing acces
 
 ## Use case
 
-Many vendors offer tiered pricing plans with different features and functionality. For those serving on-prem environments, granular control over version access is crucial, whether it’s delivering a specific feature set, pointed hotfixes to select customers or offering early access to new application versions. This level of precision is exactly what our first beta release of the licensing feature aims to deliver.
+Many vendors offer tiered pricing plans with different features and functionality. For those serving on-prem environments, granular control over version access is crucial, whether it's delivering a specific feature set, pointed hotfixes to select customers or offering early access to new application versions. This level of precision is exactly what our first beta release of the licensing feature aims to deliver.
 
 ## License features
 
@@ -41,7 +41,7 @@ Many vendors offer tiered pricing plans with different features and functionalit
 
 ## How to use it
 
-If you don’t see the feature yet, reach out, and we’ll enable it for you. Once you’re in, here’s how it works:
+If you don't see the feature yet, reach out, and we'll enable it for you. Once you're in, here's how it works:
 
 1. **Create a customer:** If non exist
 2. **Navigate to the "License Mgmt" tab and click "Create License"**
@@ -50,7 +50,7 @@ If you don’t see the feature yet, reach out, and we’ll enable it for you. On
 5. **Assign to an application**
 6. **Choose the version/s of the app you would like to grant the customer access to**
 7. **Link it to a customer**
-8. **Save:** Hit "Save" and you’re done!
+8. **Save:** Hit "Save" and you're done!
 
 The customer can now access and deploy the assigned application version/s directly from their [customer portal](/docs/product/customer-portal/).
 
