--- a/src/content/docs/docs/product/registry.mdx
+++ b/src/content/docs/docs/product/registry.mdx
@@ -1,6 +1,6 @@
 ---
 title: Artifact Registry
-description: Distr OCI-compliant artifact registry to distribute Docker images and Helm Charts to self-managed customers with advanced tag-based control and download analytics.
+description: Distribute your Docker images and Helm charts to self-managed customers with fine-grained access control and track who's using what version of your software.
 sidebar:
   order: 2
 ---
