--- a/src/content/docs/docs/product/vendor-portal.mdx
+++ b/src/content/docs/docs/product/vendor-portal.mdx
@@ -1,6 +1,6 @@
 ---
 title: Vendor Portal
-description: The central control plane for vendors to manage applications, artifacts, licenses, and customer environments, complete with application onboarding, deployment monitoring, and an artifact registry UI.
+description: Manage your applications, track customer deployments, and control access to your software from a single dashboard.
 sidebar:
   order: 4
 ---
