--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -1,6 +1,6 @@
 ---
 title: Air-Gapped Environments
-description: For customers with highly restrictive environments isolated from external networks
+description: Deploy your software to highly secure environments with no internet access using physical media transfers or IP whitelisting.
 sidebar:
   order: 4
 ---
