--- a/src/content/docs/docs/use-cases/assisted-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/assisted-self-managed.mdx
@@ -1,6 +1,6 @@
 ---
 title: Assisted Self-Managed Deployment
-description: A deployment model that balances customer control with vendor assistance
+description: Let customers maintain infrastructure control while you handle application deployment and updates through Distr agents.
 sidebar:
   order: 2
 ---
