--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -1,6 +1,6 @@
 ---
 title: Bring Your Own Cloud (BYOC)
-description: Fully vendor-managed deployments within customer-owned cloud subscriptions
+description: Deploy and manage your software in customer-owned cloud environments while maintaining full operational control.
 slug: docs/use-cases/byoc-bring-your-own-cloud
 sidebar:
   order: 3
