--- a/src/content/docs/docs/use-cases/edge-deployments.mdx
+++ b/src/content/docs/docs/use-cases/edge-deployments.mdx
@@ -1,6 +1,6 @@
 ---
 title: Edge Deployments
-description: Vendor-controlled deployments for decentralized devices and edge environments
+description: Deploy and manage your software across distributed edge locations, IoT devices, and specialized hardware with centralized control.
 sidebar:
   order: 5
 ---
