--- a/src/content/docs/docs/use-cases/fully-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/fully-self-managed.mdx
@@ -1,6 +1,6 @@
 ---
 title: Fully Self-Managed Deployment
-description: For customers who manage their own infrastructure with full control and minimal vendor access
+description: Give your customers complete control over their infrastructure while maintaining secure access to your software artifacts.
 sidebar:
   order: 1
 ---
