--- a/src/content/docs/docs/guides/distr-on-macos.mdx
+++ b/src/content/docs/docs/guides/distr-on-macos.mdx
@@ -1,6 +1,6 @@
 ---
 title: Run Distr on macOS
-description: While running the Distr agent on Windows or Linux is straightforward, macOS may require a few additional tweaks.
+description: While running the Distr agent on Windows or Linux is straightforward, macOS may require a few additional checks.
 sidebar:
   order: 6
 ---
