--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -1,10 +1,9 @@
 ---
 title: Customer Portal
-description: A white-labeled control plane for end customers to deploy agents, view and access artifacts, generate tokens, and follow vendor-provided instructions for managing self-managed software.
+description: A customer facing interface to deploy agents, access artifacts, and manage their self-managed software deployments with vendor guidance.
 sidebar:
   order: 5
 ---
-
 import {Aside} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
@@ -16,18 +15,16 @@ The customer portal is a simplified, white-labeled control plane UI built for en
   alt="Deployments interface"
 />
 
-The Customer Portal enables end customer to:
+The Customer Portal enables end customer to: 
 
-1. **Explore vendor-provided documentation**: The homepage serves as the end-customer’s landing pad, offering release notes, agent and registry instructions, helpful links, and support information. It’s the go-to place for understanding how to install and maintain the vendor’s software.
+1. **Explore vendor-provided documentation**: The homepage serves as the end-customer's landing pad, offering release notes, agent and registry instructions, helpful links, and support information. It's the go-to place for understanding how to install and maintain the vendor's software.
 
-2. **Deploy and manage agents**: In the _Deployments_ section, customers can deploy agents to their internal infrastructure. These agents can then be used to manage one or multiple deployments.
+2. **Deploy and manage agents**: In the _Deployments_ section, customers can deploy [agents](/docs/product/agents/) to their internal infrastructure. These agents can then be used to manage one or multiple deployments.
 
 3. **Access and consume artifacts**: The _Artifacts_ section displays the software artifacts that have been enabled for the customer, along with instructions on how to pull and use them.
 
 4. **Generate access tokens**: In the top-right corner, the _Customer Settings_ area allows users to generate [Personal Access Tokens (PATs)](/docs/integrations/personal-access-token/), which are required for authenticating with the registry.
 
 <Aside type="note">
-  Understand what a typical user journey looks like in this
-  [guide](/docs/guides/container-registry-for-end-customers/) on using Distr
-  from the customer perspective.
+  Understand what a typical user journey looks like in this [guide](/docs/guides/end-customer-registry-view/) on using Distr from the customer perspective.
 </Aside>
