chore: fixed linting issue

--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -4,6 +4,7 @@ description: A customer facing interface to deploy agents, access artifacts, and
 sidebar:
   order: 5
 ---
+
 import {Aside} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
@@ -15,7 +16,7 @@ The customer portal is a simplified, white-labeled control plane UI built for en
   alt="Deployments interface"
 />
 
-The Customer Portal enables end customer to: 
+The Customer Portal enables end customer to:
 
 1. **Explore vendor-provided documentation**: The homepage serves as the end-customer's landing pad, offering release notes, agent and registry instructions, helpful links, and support information. It's the go-to place for understanding how to install and maintain the vendor's software.
 
@@ -26,5 +27,7 @@ The Customer Portal enables end customer to:
 4. **Generate access tokens**: In the top-right corner, the _Customer Settings_ area allows users to generate [Personal Access Tokens (PATs)](/docs/integrations/personal-access-token/), which are required for authenticating with the registry.
 
 <Aside type="note">
-  Understand what a typical user journey looks like in this [guide](/docs/guides/end-customer-registry-view/) on using Distr from the customer perspective.
+  Understand what a typical user journey looks like in this
+  [guide](/docs/guides/end-customer-registry-view/) on using Distr from the
+  customer perspective.
 </Aside>
