chore: linter threw another error, fixed again

--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -28,6 +28,6 @@ The Customer Portal enables end customer to:
 
 <Aside type="note">
   Understand what a typical user journey looks like in this
-  [guide](/docs/guides/container-registry-for-end-customers/) on using Distr from the
-  customer perspective.
+  [guide](/docs/guides/container-registry-for-end-customers/) on using Distr
+  from the customer perspective.
 </Aside>
