--- a/src/content/docs/docs/guides/docker-env-var-template.mdx
+++ b/src/content/docs/docs/guides/docker-env-var-template.mdx
@@ -20,7 +20,7 @@ Users can configure and customize environment variables before deploying an appl
 In this guide, builds on top the [onboard a Docker application](/docs/guides/onboarding-a-docker-app/) and explains the
 environment variable templates in more detail.
 
-# What is an Environment Variable Template?
+## What is an Environment Variable Template?
 
 Environment variables are used to pass deployment specific values to your application.
 With Distr, you can define a template for these variables, allowing users to customize them before deployment and ensuring all necessary values are set.
@@ -62,7 +62,7 @@ You can execute this example with the following command:
 docker compose up --env .env
 ```
 
-# Referencing environment variables in multiple services
+## Referencing environment variables in multiple services
 
 <Aside type="caution">
   As the Distr agent **does not** mount the `.env` file as file into the
