chore: updated descriptions with Philips feedback

--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -1,6 +1,6 @@
 ---
 title: What is Distr?
-description: Deliver your software to any environment with comprehensive tooling for distribution, deployment, and access management.
+description: Distr is an open source software distribution platform for software vendors to distribute, deploy, and manage software in self-managed customer environments, air-gapped, BYOC, and edge environments. Giving vendors and end customer control and visibility over their self-managed deployments.
 slug: docs/getting-started/what-is-distr
 sidebar:
   order: 1
