--- a/src/content/docs/docs/getting-started/core-concepts.mdx
+++ b/src/content/docs/docs/getting-started/core-concepts.mdx
@@ -1,6 +1,6 @@
 ---
 title: Core Concepts
-description: Understand Distr's key components and distribution models to build your software delivery workflow.
+description: Explore Distr’s core concepts, like the distribution models it caters to, vendor and customer portals, the artifact registry, deployment agents and extensibility via the Distr Rest API and SDK.
 sidebar:
   order: 2
 ---
