--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -1,6 +1,6 @@
 ---
 title: Deployment methods
-description: Choose between Distr's managed SaaS platform or self-host Distr in your own environment to meet your security and compliance needs.
+description: 'Distr offers two deployment options: a managed SaaS platform hosted by Distr, and a self-managed option for teams that require full control, meet compliance requirements, or operate in air-gapped environments.'
 sidebar:
   order: 4
 ---
