--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -1,6 +1,6 @@
 ---
 title: Deployment Agents
-description: Overview of Distr deployment agents used to manage self-managed applications, including capabilities and agent types.
+description: Distr deployment agents are lightweight components that run in customer environments to manage the full lifecycle of infrastructure and applications. This page covers how Docker, Helm, and Terraform agents work, how to configure them, and how they enable secure, customer-controlled deployments.
 sidebar:
   order: 2
 ---
