--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -1,6 +1,6 @@
 ---
 title: Customer Portal
-description: A customer facing interface to deploy agents, access artifacts, and manage their self-managed software deployments with vendor guidance.
+description: A simplified customer-facing UI for deploying Distr agents, pulling artifacts, managing tokens, and managing vendor applications.
 sidebar:
   order: 5
 ---
