--- a/src/content/docs/docs/product/registry.mdx
+++ b/src/content/docs/docs/product/registry.mdx
@@ -1,6 +1,6 @@
 ---
 title: Artifact Registry
-description: Distribute your Docker images and Helm charts to self-managed customers with fine-grained access control and track who's using what version of your software.
+description: The Artifact Registry is a private, OCI-compliant registry built into Distr for publishing container images, Helm charts, and other artifacts to self-managed environments. It offers tag-based access control, a registry UI and detailed usage insights per customer.
 sidebar:
   order: 2
 ---
