--- a/src/content/docs/docs/product/vendor-portal.mdx
+++ b/src/content/docs/docs/product/vendor-portal.mdx
@@ -1,6 +1,6 @@
 ---
 title: Vendor Portal
-description: Manage your applications, track customer deployments, and control access to your software from a single dashboard.
+description: Manage your self-managed software distribution from a single control plane with full visibility into deployments, artifacts, licenses, customers, users, and customer portal customization.
 sidebar:
   order: 4
 ---
