--- a/src/content/docs/docs/use-cases/assisted-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/assisted-self-managed.mdx
@@ -1,6 +1,6 @@
 ---
 title: Assisted Self-Managed Deployment
-description: Let customers maintain infrastructure control while you handle application deployment and updates through Distr agents.
+description: Distr agents assist by running in end-customer environments, they pull application updates, apply configuration changes, report deployment statuses and authenticate automatically to the Distr registry, without granting vendor access to the target environment.
 sidebar:
   order: 2
 ---
