--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -1,6 +1,6 @@
 ---
 title: Bring Your Own Cloud (BYOC)
-description: Deploy and manage your software in customer-owned cloud environments while maintaining full operational control.
+description: Distr Terraform and application agents run in end-customer cloud environments, Terraform agents provision the infrastructure, and the application agents deploy, manage and update the software on top of it.
 slug: docs/use-cases/byoc-bring-your-own-cloud
 sidebar:
   order: 3
