--- a/src/content/docs/docs/use-cases/edge-deployments.mdx
+++ b/src/content/docs/docs/use-cases/edge-deployments.mdx
@@ -1,6 +1,6 @@
 ---
 title: Edge Deployments
-description: Deploy and manage your software across distributed edge locations, IoT devices, and specialized hardware with centralized control.
+description: Deploy Distr agents to IoT devices and specialized hardware, once installed, each edge device can be centrally managed and monitored through via the vendor portal.
 sidebar:
   order: 5
 ---
