chore: reorder product order
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/product/branding.mdx
+++ b/src/content/docs/docs/product/branding.mdx
@@ -1,8 +1,8 @@
 ---
-title: White-labeling the Customer Portal
+title: Branding
 description: Apply custom branding and content to the Customer Portal, allowing end users to view release notes, deployment instructions, and operational guidance in a vendor-branded interface.
 sidebar:
-  order: 6
+  order: 4
 ---
 
 import ThemeImage from '../../../../components/ThemeImage.astro';
