--- a/src/content/docs/docs/product/vendor-portal.mdx
+++ b/src/content/docs/docs/product/vendor-portal.mdx
@@ -2,7 +2,7 @@
 title: Vendor Portal
 description: Manage your self-managed software distribution from a single control plane with full visibility into deployments, artifacts, licenses, customers, users, and customer portal customization.
 sidebar:
-  order: 4
+  order: 1
 ---
 
 import ThemeImage from '../../../../components/ThemeImage.astro';
@@ -17,22 +17,14 @@ The Vendor Portal serves as the control plane for vendors, providing access to a
 
 ## Key Features
 
-1. **Onboarding Tutorials**: Start with the [Quickstart](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials) to get familiar with the platform.
-
-2. **Global Dashboard**: View health status for agents and artifacts across all deployments.
-
-3. **Application Onboarding**: Use the _Agents_ section to add [applications](/docs/guides/onboarding-a-helm-app/) and the _Deployments_ section to manage internal deployments and monitor workload health.
-
-4. **Registry Management**: Browse and view consumption metrics of your [artifacts](/docs/product/registry/) in the _Registry_ section.
-
-5. **License Management**: Define license rules to control access to specific artifact and application versions or tags.
-
-6. **Customer Management**: Invite [customers](/docs/guides/onboarding-a-new-customer/) to your organization and update their profile details.
-
-7. **User Management**: Add and manage internal team members to your Distr account.
-
-8. **Customer Portal Customization**: [White-label](/docs/product/branding/) the portal with your branding and provide customers with self-service instructions and documentation.
-
-9. **Organization Settings**: Set your organization name and configure your registry [slug](/docs/guides/container-registry/#1-set-your-registry-slug) in the _Settings_ section.
-
+1. **Tutorials**: Start with the [Quickstart](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials) to get familiar with the platform.
+2. **Dashboard**: View health status for agents and artifacts across all deployments.
+3. **Agents**: Use the [Agents](/docs/product/agents/) section to add applications, configure deployments monitor the health and view deployment logs.
+4. **Registry**: Browse and view consumption metrics of your [artifacts](/docs/product/registry/) in the _Registry_ section.
+5. **Licenses**: Define license rules to control access to specific artifact and application versions or tags.
+6. **Customers**: Invite [customers](/docs/guides/onboarding-a-new-customer/) to your organization and update their profile details.
+7. **Users**: Add and manage internal team members to your Distr account.
+8. **Branding**: [White-label](/docs/product/branding/) the customer portal with your branding and provide customers with self-service instructions and documentation.
+9. **Settings**: Set your organization name, configure your registry [slug](/docs/guides/container-registry/#1-set-your-registry-slug) in the _Settings_ section.
+  If a custom domain is configured, you can also see the configured domain name here.
 10. **Account button**: Use the account section to create [Personal Access Tokens](/docs/integrations/personal-access-token/) associated to your account for API, SKD and Registry authentication.
