--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -10,8 +10,8 @@ import {Aside, Steps} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
 <Aside type="caution" title="Currently in development">
-  We are still working on automating the BYOC integration process.
-  Please reach out to get early access.
+  We are still working on automating the BYOC integration process. Please reach
+  out to get early access.
 </Aside>
 
 Bring Your Own Cloud (BYOC) provides fully vendor-managed operations within customer-owned cloud resources.
