chore: improve documentation
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -89,7 +89,7 @@ For detailed instructions on adding applications to Distr, see our platform mana
 
 ### Deployments Overview
 
-The **Deployments** section acts as the central management and health dashboard for both vendor-managed and customer-controlled deployments.
+The **Deployments** section acts as the central management and health dashboard for all deployments.
 
 Use this section to:
 
