--- a/src/content/docs/docs/product/registry.mdx
+++ b/src/content/docs/docs/product/registry.mdx
@@ -36,7 +36,7 @@ Use it to publish versioned artifacts, enforce licensing rules, and track consum
 - **Open standards**: Built on the OCI specification and compatible with existing tooling (Docker, ORAS, Helm, etc.)
 - **Built-in licensing (beta)**: Bind artifact (versions) to licenses for fine-grained customer access control
 
-## Get started
+## Getting started
 
 <Aside type="note">
   If you haven’t set up your registry yet, start with the [in-platform
@@ -56,11 +56,6 @@ Want a quick overview of how it works? Watch this short walkthrough:
   referrerpolicy="strict-origin-when-cross-origin"
   allowfullscreen
   style="width: 560px; height: 315px; max-width: 100%; aspect-ratio: 16/9; border-radius: 8px; margin: 2rem auto; display: block; box-shadow: 0 2px 8px rgba(0,0,0,0.1);"></iframe>
-
-<Aside type="note">
-  You can also find registry setup instructions in the On-Platform Tutorials
-  section.
-</Aside>
 
 ## Artifact Registry UI
 
