--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -18,12 +18,11 @@ The customer portal is a simplified, white-labeled control plane UI built for en
 
 The Customer Portal enables end customer to:
 
-1. **Explore vendor-provided documentation**: The homepage serves as the end-customer's landing pad, offering release notes, agent and registry instructions, helpful links, and support information. It's the go-to place for understanding how to install and maintain the vendor's software.
-
-2. **Deploy and manage agents**: In the _Deployments_ section, customers can deploy [agents](/docs/product/agents/) to their internal infrastructure. These agents can then be used to manage one or multiple deployments.
-
+1. **Explore vendor-provided documentation**: The homepage serves as the end-customer's landing pad, offering release notes, agent and registry instructions, helpful links, and support information.
+   It's the go-to place for understanding how to install and maintain the vendor's software.
+2. **Deploy and manage agents**: In the _Deployments_ section, customers can deploy [agents](/docs/product/agents/) to their internal infrastructure.
+   These agents can then be used to manage one or multiple deployments.
 3. **Access and consume artifacts**: The _Artifacts_ section displays the software artifacts that have been enabled for the customer, along with instructions on how to pull and use them.
-
 4. **Generate access tokens**: In the top-right corner, the _Customer Settings_ area allows users to generate [Personal Access Tokens (PATs)](/docs/integrations/personal-access-token/), which are required for authenticating with the registry.
 
 <Aside type="note">
