chore: clarify read only agent version
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -142,7 +142,7 @@ Deployment health is shown using color-coded status badges:
 All Distr agents share a common set of core capabilities designed to ensure reliable and secure deployments. These include guided installation processes, automated application updates, comprehensive health monitoring, log aggregation for troubleshooting, and secure, outbound-only communication with the Distr Hub.
 
 <Aside>
-  We are also developing an embeddable agent SDK that can be integrated directly
-  into vendor applications, providing a more seamless deployment experience with
-  minimal additional components. For more information, feel free to reach out.
+  We also working on read-only version of the Distr agent that will not be able
+  to alter a deployment, but just monitor the deployment status and report logs
+  and metrics.
 </Aside>
